# agx_deep_collider

./: .Xresources  .gitignore  .gitmodules  build_everything.sh  connect_to_container.sh  orin-DeepCollision.code-workspace  run_inference.sh  stop_exp.sh
Data/MyhalSim/: batch_limits.pkl  max_in_limits.pkl  neighbors_limits.pkl
Data/MyhalSim/old/: neighbors_limits.pkl
bridge_ws/old/follow_waypoints/launch/: follow_waypoints.launch
bridge_ws_old/: static_bridge_custom.cpp
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/include/msg_interfaces/: VoxGrid.h
catkin_ws/devel/lib/pkgconfig/: msg_interfaces.pc
catkin_ws/devel/lib/python2.7/dist-packages/msg_interfaces/msg/: _VoxGrid.py  __init__.py
catkin_ws/devel/share/common-lisp/ros/msg_interfaces/msg/: VoxGrid.lisp  _package.lisp  _package_VoxGrid.lisp  msg_interfaces-msg.asd
catkin_ws/devel/share/gennodejs/ros/msg_interfaces/msg/: VoxGrid.js  _index.js
catkin_ws/devel/share/msg_interfaces/cmake/: msg_interfaces-msg-extras.cmake  msg_interfaces-msg-paths.cmake  msg_interfacesConfig.cmake
catkin_ws/devel/share/roseus/ros/msg_interfaces/: manifest.l
catkin_ws/devel/share/roseus/ros/msg_interfaces/msg/: VoxGrid.l
catkin_ws/src/follow_waypoints/launch/: follow_waypoints.launch
catkin_ws/src/follow_waypoints/saved_path/: A1.csv  A2.csv
catkin_ws/src/follow_waypoints/src/follow_waypoints/: follow_waypoints.py
catkin_ws/src/msg_interfaces/: CMakeLists.txt  package.xml
catkin_ws/src/sarl/: .gitignore  README.md  env.config  il_model.pth  policy.config  resumed_rl_model.pth  setup.py
catkin_ws/src/sarl/crowd_nav/: mutils.py  ros.py  test.py  train.py
catkin_ws/src/sarl/crowd_nav/configs/: env.config
catkin_ws/src/sarl/crowd_nav/model/: env.config  rl_model.pth
catkin_ws/src/sarl/crowd_nav/policy/: cadrl.py  multi_human_rl.py
catkin_ws/src/sarl/crowd_sim/: __init__.py
catkin_ws/src/sarl/crowd_sim/envs/: __init__.py  crowd_sim.py  crowd_sim_plus.py
catkin_ws/src/sarl/crowd_sim/envs/policy/: orca.py
catkin_ws/src/sarl/crowd_sim/envs/utils/: agent.py  state.py
catkin_ws/src/sarl/crowdnav.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
catkin_ws/src/sarl/simple_nav/: CMakeLists.txt  crowd_planner.launch  crowd_planner.py  mutils.py  package.xml  simple_test.py  test.py
catkin_ws/src/sarl/simple_nav/configs/: env.config
catkin_ws/src/sarl/simple_nav/policy/: dwa.py  policy_factory.py  teleop.py
catkin_ws/src/sarl/simple_nav/utils/: explorer.py
catkin_ws/src/sarl/simple_nav/utils/PythonRobotics/: dynamic_window_approach.py
catkin_ws/src/tor59_jackal/launch/: teb_modified.launch  teb_normal.launch
catkin_ws/src/tor59_jackal/params/map_nav_params/: global_costmap_params.yaml
catkin_ws/src/vox_msgs/: CMakeLists.txt
catkin_ws/src/zeus/: CMakeLists.txt  README.md  config.cmake  configure.sh
catkin_ws/src/zeus/kalman/: CMakeLists.txt  mainpage.dox  package.xml
catkin_ws/src/zeus/kalman/include/types/: objects3D.hpp
catkin_ws/src/zeus/kalman/include/utils/: association.hpp  hmm.hpp  kalman.hpp  transform_utils.hpp
catkin_ws/src/zeus/kalman/src/types/: objects3D.cpp
catkin_ws/src/zeus/kalman/src/utils/: association.cpp  hmm.cpp  kalman.cpp  transform_utils.cpp
catkin_ws/src/zeus/object_detection/: CMakeLists.txt  mainpage.dox  package.xml
catkin_ws/src/zeus/object_detection/config/: params_kalman.yaml  params_lidar.yaml  params_occupancy_grid.yaml  params_parking_occupancy.yaml  params_squeezeDet_od.yaml  params_vis.yaml
catkin_ws/src/zeus/object_detection/include/cluster_publisher/: cluster_publisher_node.h
catkin_ws/src/zeus/object_detection/include/object_tracker/: object_tracker_node.h
catkin_ws/src/zeus/object_detection/include/object_visualizer/: object_visualizer_node.h
catkin_ws/src/zeus/object_detection/include/occupancy_grid/: occupancy_grid_node.h
catkin_ws/src/zeus/object_detection/include/secondary_clustering/: secondary_clustering_node.h
catkin_ws/src/zeus/object_detection/launch/: object_detection.launch
catkin_ws/src/zeus/object_detection/models/: scale-2019-05-19-aug_384x1248_noMean_bgr_R5.xml
catkin_ws/src/zeus/object_detection/src/cluster_publisher/: cluster_publisher.cpp  cluster_publisher_node.cpp
catkin_ws/src/zeus/object_detection/src/object_tracker/: object_tracker.cpp  object_tracker_node.cpp
catkin_ws/src/zeus/object_detection/src/object_visualizer/: object_visualizer.cpp  object_visualizer_node.cpp
catkin_ws/src/zeus/object_detection/src/occupancy_grid/: occupancy_grid.cpp  occupancy_grid_node.cpp
catkin_ws/src/zeus/object_detection/src/secondary_clustering/: secondary_clustering.cpp  secondary_clustering_node.cpp
catkin_ws/src/zeus/utils/: CMakeLists.txt
catkin_ws/src/zeus/utils/tranforms/: CMakeLists.txt  bolt_tf.launch  ost.yaml  package.xml
catkin_ws/src/zeus/utils/zeus_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/zeus/utils/zeus_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Detections2D.msg  Detections3D.msg  LaneStamped.msg  LaneStatus.msg  ParkingOccupancy.msg  TrafficLightDecision.msg  Trajectory2.msg  TurnSignal.msg  Waypoint.msg  Waypoint2.msg
catkin_ws/src/zeus/utils/zeus_msgs/srv/: requestTransmissionRange.srv
catkin_ws/src/zeus/zeus_pcl/: CMakeLists.txt  mainpage.dox
catkin_ws/src/zeus/zeus_pcl/include/types/: zeus_pcl_types.hpp
catkin_ws/src/zeus/zeus_pcl/include/utils/: zeus_pcl.hpp  zeus_vis.hpp
catkin_ws/src/zeus/zeus_pcl/src/utils/: zeus_pcl.cpp  zeus_vis.cpp
docker/elo_image/: Dockerfile  docker_build.sh
docker/foxy_image/: Dockerfile  docker_build.sh  ros2.rosinstall
docker/laptop_foxy_image/: Dockerfile  docker_build.sh
docker/orin_foxy/: Dockerfile  docker_build.sh
