<?xml version="1.0"?>
<package>
  <name>object_detection</name>
  <version>0.0.1</version>
  <description>The object_detection package</description>
  <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>zeus_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kalman</build_depend>
  <build_depend>zeus_pcl</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>zeus_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kalman</run_depend>
  <run_depend>zeus_pcl</run_depend>
  <export>
  </export>
</package>
