<?xml version="1.0"?>
<package format="2">
  <name>zeus_msgs</name>
  <version>0.0.0</version>
  <description>The zeus_msgs package</description>
  <maintainer email="keenan.burnett@autodrive.utoronto.ca">autoronto</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
